@@ -1169,6 +1169,7 @@ static void
 svr4_read_so_list (CORE_ADDR lm, struct so_list ***link_ptr_ptr,
 		   int ignore_first)
 {
+  struct so_list *first = NULL;
   CORE_ADDR prev_lm = 0, next_lm;
 
   for (; lm != 0; prev_lm = lm, lm = next_lm)
@@ -1208,7 +1209,8 @@ svr4_read_so_list (CORE_ADDR lm, struct so_list ***link_ptr_ptr,
 	{
 	  struct svr4_info *info = get_svr4_info ();
 
-	  info->main_lm_addr = new->lm_info->lm_addr;
+	  first = new;
+          info->main_lm_addr = new->lm_info->lm_addr;
 	  do_cleanups (old_chain);
 	  continue;
 	}
@@ -1218,8 +1220,16 @@ svr4_read_so_list (CORE_ADDR lm, struct so_list ***link_ptr_ptr,
 			  SO_NAME_MAX_PATH_SIZE - 1, &errcode);
       if (errcode != 0)
 	{
-	  warning (_("Can't read pathname for load map: %s."),
-		   safe_strerror (errcode));
+	  /* If this entry's l_name address matches that of the
+	     inferior executable, then this is not a normal shared
+	     object, but (most likely) a vDSO.  In this case, silently
+	     skip it; otherwise emit a warning. */
+	  if (! (first != NULL
+	   && new->lm_info->l_name == first->lm_info->l_name))
+	  {
+	    warning (_("Can't read pathname for load map: %s."),
+		safe_strerror (errcode));
+	  }
 	  do_cleanups (old_chain);
 	  continue;
 	}
