@@ -1,3 +1,8 @@
+2013-09-24  Andreas Arnez  <arnez@linux.vnet.ibm.com>
+
+	* gdb.base/corefile.exp: Add a check to assure warning-free 
+	core-file load.
+
 2013-04-25  Sergio Durigan Junior  <sergiodj@redhat.com>
 
 	* gdb.arch/arm-bl-branch-dest.c: New file.
